FILE(GLOB SACLIB_HEADERS ${CMAKE_SOURCE_DIR}/include/*.h)
FILE(GLOB SACLIB_SOURCES ${CMAKE_SOURCE_DIR}/src/*.c)

set_source_files_properties(
	${CMAKE_CURRENT_SOURCE_DIR}/GC.c
        ${CMAKE_SOURCE_DIR}/include/sysdep.h
	PROPERTIED
	GENERATED
)

if(SOLARIS AND SPARC)
	set_source_files_properties(
		${CMAKE_CURRENT_SOURCE_DIR}/FPCATCH.c
		${CMAKE_CURRENT_SOURCE_DIR}/FPHAND.c
		${CMAKE_CURRENT_SOURCE_DIR}/flush.s
		${CMAKE_CURRENT_SOURCE_DIR}/get_pointers.s
		PROPERTIED
		GENERATED
	)
	list(APPEND SACLIB_SOURCES
		${CMAKE_CURRENT_SOURCE_DIR}/FPCATCH.c
		${CMAKE_CURRENT_SOURCE_DIR}/FPHAND.c
		${CMAKE_CURRENT_SOURCE_DIR}/flush.s
		${CMAKE_CURRENT_SOURCE_DIR}/get_pointers.s
	)
endif()

list(APPEND SACLIB_HEADERS ${CMAKE_SOURCE_DIR}/include/sysdep.h)
LIST(APPEND SACLIB_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/GC.c)
add_library(saclib_objects OBJECT ${SACLIB_HEADERS} ${SACLIB_SOURCES})
target_include_directories(saclib_objects PUBLIC ${CMAKE_SOURCE_DIR}/include)

install(FILES ${SACLIB_HEADERS} DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/saclib")
